--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/estudiantes.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/estudiantes.html.twig
@@ -31,7 +31,7 @@ $( "#estudiantes h3" ).css("opacity","0.4");
 				{% if msgerr.id == '1' %}
 					<div id = "error">{{ msgerr.descripcion }}</div>	
 				{% else %}
-					<table class="practicantesTableHead">
+					<table class="generalTableHead">
 						<tbody>
 							<tr class="tableHead">
 								<th width="5%"></th>
@@ -50,19 +50,17 @@ $( "#estudiantes h3" ).css("opacity","0.4");
 			
 						{% set id = 1 %}
 						<div style="width: 100%; height: 750px; overflow: auto; position:relative; padding-bottom:30px;"> 
-							<table class="practicantesTable">
+							<table class="generalTable">
 							
 								{% for estudiante in listaEstudiantes %}
 								<tr class="spacer"></tr>
 								<tr height="20px" class="tableItem">
 									<td id="hoverDiv" >
 										<td><h2>{{ id }}</h2></td>
-										<td height="20px"><div class="itemImgContainer"><img class = "foto" border="0" src="{{ asset('uploads/fotos/' ~  practicante.path) }}" alt="Pulpit rock" width="100%" /></div></td>
 										<td><span>{{ estudiante.apellidos }}</span></td>
 										<td><span>{{ estudiante.nombres }}</span></td>
 										<td>{{ estudiante.codigo }}</td>
 										<td>{{ estudiante.ci }}</td>
-										<td>{{ estudiante.telefonoMovil }}</td>
 										<td>
 											<div>
 												<table class="opciones">
@@ -71,10 +69,10 @@ $( "#estudiantes h3" ).css("opacity","0.4");
 													{% else %}
 													<td><img src="{{ asset('img/nocrono.png') }}" /></td>
 													{% endif %}
-													<td><a href="{{ path('usuario_practicante', { 'codigo': estudiante.codigo}) }}"><img src="{{ asset('img/editar.png') }}" ><h3>Editar</h3></a></td>
+													
 												</table> <!-- opciones -->
 											</div>
-											{{ estudiante.emailInstitucional }} <br> {{ estudiante.emailPersonal }}</td>
+											{{ estudiante.emailInstitucional }} <br> {{ estudiante.email }}</td>
 										</td> <!-- hoverDiv -->
 									</tr>
 									{% set id = id + 1 %}
