--- a/src/Ingenieria/UsuarioBundle/Resources/views/layout.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/layout.html.twig
@@ -21,6 +21,10 @@
 				<img id="externoIcon" src="{{ asset('img/externoIcon.png') }}">
 				<h3>Estudiantes</h3>
 			</a>
+			<a href="{{ path('usuario_profesores') }}" class="menubutton"  id="profesores">
+				<img id="externoIcon" src="{{ asset('img/externoIcon.png') }}">
+				<h3>Profesores</h3>
+			</a>
 		</div>
 
 {% endblock  %}
