--- a/web/css/global.css
+++ b/web/css/global.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 17, ../../../../lib/gems/1.8/gems/compass-0.12.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,45 +24,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../lib/gems/1.8/gems/compass-0.12.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../lib/gems/1.8/gems/compass-0.12.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../lib/gems/1.8/gems/compass-0.12.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../lib/gems/1.8/gems/compass-0.12.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../lib/gems/1.8/gems/compass-0.12.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../lib/gems/1.8/gems/compass-0.12.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../lib/gems/1.8/gems/compass-0.12.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../lib/gems/1.8/gems/compass-0.12.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
@@ -326,7 +326,27 @@ a#cerrarButtonLink {
   cursor: pointer;
 }
 
-/* line 259, psass/sass/global.scss */
+/* line 257, psass/sass/global.scss */
+.button img {
+  display: inline;
+}
+
+/* line 263, psass/sass/global.scss */
+.downSection img {
+  position: relative;
+  top: 8px;
+}
+/* line 267, psass/sass/global.scss */
+.downSection h4 {
+  margin-left: 10px;
+}
+
+/* line 273, psass/sass/global.scss */
+.button h4 {
+  display: inline;
+}
+
+/* line 279, psass/sass/global.scss */
 input[type="text"], input[type="password"], #academico_perfil, #centro_direccion, input[type="email"], input[type="textarea"], input[type="password"] {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -344,27 +364,27 @@ input[type="text"], input[type="password"], #academico_perfil, #centro_direccion
   font-family: helvetica;
 }
 
-/* line 273, psass/sass/global.scss */
+/* line 293, psass/sass/global.scss */
 input[type="radio"] {
   float: left;
 }
 
-/* line 276, psass/sass/global.scss */
+/* line 296, psass/sass/global.scss */
 .nomodificable {
   border: none !important;
 }
 
-/* line 280, psass/sass/global.scss */
+/* line 300, psass/sass/global.scss */
 .nomodificable input {
   border: none !important;
 }
 
-/* line 283, psass/sass/global.scss */
+/* line 303, psass/sass/global.scss */
 #centro_direccion {
   max-height: 50px;
 }
 
-/* line 286, psass/sass/global.scss */
+/* line 306, psass/sass/global.scss */
 #academico_perfil {
   height: 150px;
   width: 100%;
@@ -372,7 +392,7 @@ input[type="radio"] {
   padding-top: 15px;
 }
 
-/* line 293, psass/sass/global.scss */
+/* line 313, psass/sass/global.scss */
 select {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -393,12 +413,12 @@ select {
   background: url("../img/arrow.png") #242021 no-repeat;
 }
 
-/* line 308, psass/sass/global.scss */
+/* line 328, psass/sass/global.scss */
 select:hover {
   background: url("../img/arrow.png") #ec1c24 no-repeat;
 }
 
-/* line 313, psass/sass/global.scss */
+/* line 333, psass/sass/global.scss */
 input[type="text"]:focus, #academico_perfil:focus, #centro_direccion:focus, input[type="password"]:focus, select:focus, input[type="email"]:focus {
   outline: none;
   border: #af0000 solid 1px;
