fix css img top id cronograma

--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/avisonoinscripto.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/avisonoinscripto.html.twig
@@ -1,7 +1,7 @@
 {% extends 'IngenieriaEstudianteBundle::layout.html.twig' %}
 
 {% block programa %}
-Aplicación WEB - [Profesor]
+Aplicación WEB - [Estudiante]
 {% endblock %}
 
 {% block js  %}
