--- a/src/Ingenieria/EstudianteBundle/Resources/views/layout.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/layout.html.twig
@@ -14,8 +14,8 @@
 
 {% block sideBarMenu %}
 		<div id="menu">	
-			<a href="{{ path('ingenieria_estudiante_cronograma') }}" class="menubutton"  id="cronograna">
-				<img id="externoIcon" src="{{ asset('img/externoIcon.png') }}">
+			<a href="{{ path('ingenieria_estudiante_cronograma') }}" class="menubutton"  id="cronograma">
+				<img id="externoIcon" src="{{ asset('img/cronograma.png') }}">
 				<h3>Cronograma</h3>
 			</a>
 		</div>
