--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividad.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividad.html.twig
@@ -20,7 +20,7 @@ $( "#actividades h3" ).css("opacity","0.4");
 	<div class = "upSection">
 		<h1 class="sectionTitle">Actividad complementaria</h1>
 		<a href="javascript:history.back()" class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Regresar</h4></a>
-		<a href="{{ path('ingenieria_estudiante_inscripcion' , { 'id': actividad.id }) }}" class = "button"><img src="{{ asset('img/guardar.png') }}"/><h4>Inscribir</h4></a>
+		
 	</div>
 	{% endblock  %}
 
@@ -66,9 +66,9 @@ $( "#actividades h3" ).css("opacity","0.4");
 					</div>
 				</div>
 			</form>
+			<a href="{{ path('ingenieria_estudiante_inscripcion' , { 'id': actividad.id }) }}" class = "button"><h4>Cursar actividad</h4></a>
 			</div><!--profileFormContainer -->	
 		</div><!--profileContainer -->	
-
 	</div><!--donwsection -->
 
 	{% endblock %}
