--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/inscripcion.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/inscripcion.html.twig
@@ -18,7 +18,7 @@ $( "#actividades h3" ).css("opacity","0.4");
 <div class="content">
 	{% block upSection  %}
 	<div class = "upSection">
-		<h1 class="sectionTitle">Inscripción Actividad complementaria</h1>
+		<h1 class="sectionTitle">Inscripción actividad complementaria</h1>
 		<a href="javascript:history.back()" class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Regresar</h4></a>
 	</div>
 	{% endblock  %}
@@ -26,8 +26,8 @@ $( "#actividades h3" ).css("opacity","0.4");
 	{% block downSection  %}
 	<div class = "downSection"> 
 		<div class="profileContainer">
-		<h2 style="color : black;">Confirme su inscripcion en la actividad complementaria</h2>
-		<a href="javascript:history.back()" class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Confimar!</h4></a>
+		<h2 style="color : black;">Confirme su inscripcion en la actividad complementaria <a href="javascript:history.back()" class = "button"><h4>Confimar!</h4></a></h2>
+		
 		</div>
 	</div><!--downsection -->
 
