--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/inscripcion.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/inscripcion.html.twig
@@ -6,9 +6,9 @@ Aplicación WEB : [Estudiante]
 
 {% block js  %}
 <script>
-$( "#actividades" ).css("background-color","#000");
-$( "#actividades img" ).css("opacity","0.4");
-$( "#actividades h3" ).css("opacity","0.4");
+$( "#cronograma" ).css("background-color","#000");
+$( "#cronograma img" ).css("opacity","0.4");
+$( "#cronograma h3" ).css("opacity","0.4");
 </script>
 
 {% endblock %}
