--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/confirmacion.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/confirmacion.html.twig
@@ -18,7 +18,8 @@ $( "#cronograma h3" ).css("opacity","0.4");
 	<div class="content">
 		{% block upSection  %}
 		<div class = "upSection">
-			<h1 class ="sectionTitle">Aviso</h1>
+			<h1 class ="sectionTitle">Inscripción satisfactoria</h1>
+			<a href="javascript:history.back()" class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Regresar</h4></a>
 		</div>
 		{% endblock  %}
 
@@ -26,7 +27,7 @@ $( "#cronograma h3" ).css("opacity","0.4");
 		<div class = "downSection">
 			
 			<h2 style = "color: black">
-				Estimado estudiante le informamos que aun no ha seleccionado una actividad complementaria. Para ver las 
+				Su inscripción ha sido formalizada en el sistema! 
 				<a href="{{ path('ingenieria_estudiante_actividades') }}"  class = "button"><h4>ofertas disponibles!</h4></a>
 			</h2>
 		</div><!-- downSection -->
