fix ver actividades profesor twig

--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/actividades.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/actividades.html.twig
@@ -63,8 +63,7 @@ $( "#actividades h3" ).css("opacity","0.4");
 							<td><h2>{{ id }}</h2></td>
 							
 							<td style=" width:40%"><span style="margin-left:30px; ">{{ actividad.nombre }}</span></td>
-							<td style=" width:12%"><span>{{ actividad.url }}</span></td>
-							<td style=" width:8%">{{ actividad.numeroCupos }}</td>
+							<td style=" width:8%"><span>{{ actividad.numeroCupos }}</span></td>
 							<td style=" width:50%"></td>
 							<td></td>
 
