--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividades.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividades.html.twig
@@ -6,9 +6,9 @@ Aplicación WEB - [Profesor]
 
 {% block js  %}
 <script>
-$( "#cronograma" ).css("background-color","#000");
-$( "#cronograma img" ).css("opacity","0.4");
-$( "#cronograma h3" ).css("opacity","0.4");
+//$( "#cronograma" ).css("background-color","#000");
+//$( "#cronograma img" ).css("opacity","0.4");
+//$( "#cronograma h3" ).css("opacity","0.4");
 </script>
 
 {% endblock %}
