fix ver estudiantes status cronograma

--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/estudiantes.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/estudiantes.html.twig
@@ -63,10 +63,10 @@ $( "#estudiantes h3" ).css("opacity","0.4");
 										<td>
 											<div>
 												<table class="opciones">
-													{% if id == 1 %}
+													{% if estudiante.aprobadoCronograma == true %}
 													<td><a href="{{ path('usuario_cronograma', { 'id': estudiante.id}) }}"><img src="{{ asset('img/cronograma.png') }}" /><h3>Cronograma</h3></a></td>
 													{% else %}
-													<td><img src="{{ asset('img/nocrono.png') }}" /></td>
+													<td	><img src="{{ asset('img/nocrono.png') }}" /></td>
 													{% endif %}
 													
 												</table> <!-- opciones -->
