--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/profesores.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/profesores.html.twig
@@ -70,15 +70,15 @@ $( "#profesores h3" ).css("opacity","0.4");
 							<td style=" width:8%"></td>
 							<td style=" width:8%"> {{ profesor.emailInstitucional }}</td>
 							<td style=" width:8	%"></td>
-							<td>{{ profesor.email }}</td>
 							<td>
 								<table class="opciones">
 									<td>
 									<a href="{{ path('usuario_actualizar_profesor' , { 'id': profesor.id}) }}"><img src="{{ asset('img/editar.png') }}" ><h3> Editar </h3></a>
 									</td>
-									<td><a href="{{ path('usuario_eliminar_profesor', { 'id': profesor.id}) }}"><img src="{{ asset('img/editar.png') }}"><h3>Eliminar</h3></a></td>
+									<td style="width: 100px;"><a href="{{ path('usuario_eliminar_profesor', { 'id': profesor.id}) }}"><img src="{{ asset('img/editar.png') }}"><h3>Eliminar</h3></a></td>
 
 								</table>
+								{{ profesor.email }}
 							</td>
 						</td> <!-- hoverDiv -->
 					</tr>
