--- a/src/Ingenieria/UsuarioBundle/Resources/views/layout.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/layout.html.twig
@@ -25,8 +25,12 @@
 				<img id="externoIcon" src="{{ asset('img/externoIcon.png') }}">
 				<h3>Profesores</h3>
 			</a>
-		</div>
+			<a href="{{ path('usuario_actividades') }}" class="menubutton"  id="actividades">
+				<img id="externoIcon" src="{{ asset('img/externoIcon.png') }}">
+				<h3>Actividades</h3>
+			</a>
 
+		</div>
 {% endblock  %}
 
 {% block upSection %} 
