--- a/src/Ingenieria/DirectorBundle/Resources/views/Default/profesores.html.twig
+++ b/src/Ingenieria/DirectorBundle/Resources/views/Default/profesores.html.twig
@@ -6,9 +6,9 @@ Aplicación WEB - [Director]
 
 {% block js  %}
 <script>
-$( "#asesoresExternos" ).css("background-color","#000");
-$( "#asesoresExternos img" ).css("opacity","0.4");
-$( "#asesoresExternos h3" ).css("opacity","0.4");
+$( "#profesores" ).css("background-color","#000");
+$( "#profesores img" ).css("opacity","0.4");
+$( "#profesores	 h3" ).css("opacity","0.4");
 </script>
 
 {% endblock %}
