--- a/src/Ingenieria/DirectorBundle/Resources/views/Default/profesor.html.twig
+++ b/src/Ingenieria/DirectorBundle/Resources/views/Default/profesor.html.twig
@@ -6,9 +6,9 @@ Aplicación WEB - [Director]
 
 {% block js  %}
 <script>
-$( "#asesoresExternos" ).css("background-color","#000");
-$( "#asesoresExternos img" ).css("opacity","0.4");
-$( "#asesoresExternos h3" ).css("opacity","0.4");
+$( "#profesores" ).css("background-color","#000");
+$( "#profesores img" ).css("opacity","0.4");
+$( "#profesores h3" ).css("opacity","0.4");
 </script>
 
 {% endblock %}
@@ -18,7 +18,7 @@ $( "#asesoresExternos h3" ).css("opacity","0.4");
 <div class="content">
 	{% block upSection  %}
 	<div class = "upSection">
-		<h1 class ="sectionTitle">Datos del asesor externo </h1>
+		<h1 class ="sectionTitle">Datos del profesor </h1>
 		<a href="{{ path('ingenieria_director_homepage') }}" class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Regresar</h4></a>
 	</div>
 	{% endblock  %}
@@ -77,7 +77,7 @@ $( "#asesoresExternos h3" ).css("opacity","0.4");
 					<div class="inputContainer" style="position:relative; margin-top:20px;">
 
 						<img style="position:absolute; left:15px; float:left; pointer-events:none;" src="{{ asset('img/guardar.png') }}" />
-						<input style="padding-left:40px;" class="button" type="submit" value="Guardar" />
+						<input style="padding-left:40px;" class="button" type="submit" value="Guardar cambios" />
 					</div>
 				</form>	
 			</div><!-- profileFormContainer -->
