--- a/src/Ingenieria/DirectorBundle/Resources/views/layout.html.twig
+++ b/src/Ingenieria/DirectorBundle/Resources/views/layout.html.twig
@@ -14,7 +14,7 @@
 
 {% block sideBarMenu %}
 		<div id="menu">	
-			<a href="{{ path('ingenieria_director_homepage') }}" class="menubutton"  id="programas">
+			<a href="{{ path('ingenieria_director_homepage') }}" class="menubutton"  id="profesores">
 				<img id="externoIcon" src="{{ asset('img/externoIcon.png') }}">
 				<h3>Profesores</h3>
 			</a>
